--- a/FakerSpotter/Pages/Finish.razor
+++ b/FakerSpotter/Pages/Finish.razor
@@ -1,5 +1,4 @@
-﻿@inherits PageLayout
-@page "/finish"
+﻿@page "/finish"
 
 @if (!UserSettings.IsRoomOneCompleted && !UserSettings.IsRoomTwoCompleted && !UserSettings.IsRoomThreeCompleted && !UserSettings.IsRoomFourCompleted && !UserSettings.IsRoomFiveCompleted)
 {
