--- a/FakerSpotter/Pages/Leaderboards.razor
+++ b/FakerSpotter/Pages/Leaderboards.razor
@@ -1,5 +1,4 @@
-﻿@inherits PageLayout
-@page "/leaderboards"
+﻿@page "/leaderboards"
 
 <div style="text-align: center;">
     <h3>Leaderboards</h3>
