--- a/FakerSpotter/Pages/Rooms/Room4.razor
+++ b/FakerSpotter/Pages/Rooms/Room4.razor
@@ -1,49 +1,7 @@
-﻿@inherits PageLayout
-@page "/room4"
+﻿@page "/room4"
 
-@if (UserSettings.IsRoomFourCompleted)
-{
-    <div style="text-align: center;">
-        <h3>Halt</h3>
-        <p>This room is already completed.</p>
-        <Button Color="Color.Primary" Clicked="NextRoom">Next</Button>
-    </div>
-    return;
-}
-
-@if (!UserSettings.IsRoomThreeCompleted)
-{
-    <div style="text-align: center;">
-        <h3>Halt</h3>
-        <p>The previous room needs to be completed first.</p>
-        <Button Color="Color.Primary" Clicked="PreviousRoom">Back</Button>
-    </div>
-    return;
-}
-
-<h3>Room 4 - Spot the fake news!</h3>
-
-<p>
-    This is just a placeholder for the actual room.
-</p>
-
-<button class="btn btn-primary" @onclick="NextRoom">Next</button>
-
-@code
-{
-
-    [Inject]
-    private NavigationManager NavigationManager { get; set; }
-
-    private void NextRoom()
-    {
-        UserSettings.IsRoomFourCompleted = true;
-        NavigationManager.NavigateTo("room5");
-    }
-
-    private void PreviousRoom()
-    {
-        NavigationManager.NavigateTo("room3");
-    }
-
-}
+<RoomPanel RoomName="Room 4" IsCompleted="UserSettings.IsRoomFourCompleted" IsLocked="!UserSettings.IsRoomThreeCompleted" NextRoomEndpoint="room5" PreviousRoomEndpoint="room3">
+    <ChildContent>
+        Hello World!
+    </ChildContent>
+</RoomPanel>
