--- a/FakerSpotter/_Imports.razor
+++ b/FakerSpotter/_Imports.razor
@@ -13,5 +13,6 @@
 
 @using FakerSpotter
 @using FakerSpotter.Components
+@using FakerSpotter.Components.Layouts
 @using FakerSpotter.Core
 @using FakerSpotter.Core.Data
