Fixed some issues

--- a/FakerSpotter/Components/HeadlineClosedPanel.razor
+++ b/FakerSpotter/Components/HeadlineClosedPanel.razor
@@ -10,16 +10,18 @@
     }
     else
     {
-        <h5>Scored no points!</h5>
+        <h5>0</h5>
     }
 }
 else
 {
-    <h3>@Question.Headline</h3>
-    <ListGroup Mode="ListGroupMode.Selectable">
-        <ListGroupItem Color="Color.Success" Clicked="PickRealNews">Real News</ListGroupItem>
-        <ListGroupItem Color="Color.Danger" Clicked="PickFakeNews">Fake News</ListGroupItem>
-    </ListGroup>
+    <Field>
+        <FieldLabel>@Question.Headline</FieldLabel>
+        <ListGroup Mode="ListGroupMode.Selectable">
+            <ListGroupItem Clicked="PickRealNews">Real News</ListGroupItem>
+            <ListGroupItem Clicked="PickFakeNews">Fake News</ListGroupItem>
+        </ListGroup>
+    </Field>
 }
 
 @code
@@ -41,7 +43,6 @@ else
         if (!Question.IsFake)
             Points += 100;
         ShowEnd = true;
-        // BlazorUtilities.DelayTask(3);
         await OnComplete.InvokeAsync(Points);
     }
 
@@ -50,7 +51,6 @@ else
         if (Question.IsFake)
             Points += 100;
         ShowEnd = true;
-        // BlazorUtilities.DelayTask(3);
         await OnComplete.InvokeAsync(Points);
     }
 
