--- a/FakerSpotter/Pages/Rooms/Room2.razor
+++ b/FakerSpotter/Pages/Rooms/Room2.razor
@@ -1,7 +1,21 @@
 ﻿@page "/room2"
 
 <RoomPanel RoomName="Room 2" IsCompleted="UserSettings.IsRoomTwoCompleted" IsLocked="!UserSettings.IsRoomOneCompleted" NextRoomEndpoint="room3" PreviousRoomEndpoint="room1">
-    <ChildContent>
-        Hello World!
-    </ChildContent>
+    <RoomContent>
+        This room is currently incomplete, you may proceed to the next room
+        <Button Color="Color.Primary" Clicked="Continue">Continue</Button>
+    </RoomContent>
 </RoomPanel>
+
+@code
+{
+
+    [Inject] private NavigationManager NavigationManager { get; set; }
+
+    private void Continue()
+    {
+        UserSettings.IsRoomTwoCompleted = true;
+        NavigationManager.NavigateTo("room3");
+    }
+
+}
