--- a/FakerSpotter/Pages/Rooms/Room5.razor
+++ b/FakerSpotter/Pages/Rooms/Room5.razor
@@ -1,7 +1,21 @@
 ﻿@page "/room5"
 
-<RoomPanel RoomName="Room 5" IsCompleted="UserSettings.IsRoomFiveCompleted" IsLocked="!UserSettings.IsRoomFourCompleted" NextRoomEndpoint="room3" PreviousRoomEndpoint="room1">
-    <ChildContent>
-        Hello World!
-    </ChildContent>
+<RoomPanel RoomName="Room 5" IsCompleted="UserSettings.IsRoomFiveCompleted" IsLocked="!UserSettings.IsRoomFourCompleted" NextRoomEndpoint="finish" PreviousRoomEndpoint="room4">
+    <RoomContent>
+        This room is currently incomplete, you may proceed to the next room
+        <Button Color="Color.Primary" Clicked="Continue">Continue</Button>
+    </RoomContent>
 </RoomPanel>
+
+@code
+{
+
+    [Inject] private NavigationManager NavigationManager { get; set; }
+
+    private void Continue()
+    {
+        UserSettings.IsRoomFiveCompleted = true;
+        NavigationManager.NavigateTo("finish");
+    }
+
+}
