--- a/FakerSpotter/Components/MainLayout.razor
+++ b/FakerSpotter/Components/MainLayout.razor
@@ -13,51 +13,38 @@
         </nav>
     </LayoutHeader>
     <LayoutContent>
-        <div class="container">
-            <div class="row p-1">
-                <Steps SelectedStep="SelectedStep" SelectedStepChanged="() => SelectedStep = null">
-                    <Items>
-                        <Step Name="start" Color="Color.Primary" Completed="true">
-                            <Marker>
-                                <Icon Name="IconName.Home"/>
-                            </Marker>
-                            <Caption>
-                                Start
-                            </Caption>
-                        </Step>
-                        <Step Name="room1" Index="1" Color="Color.Success" Completed="UserSettings.IsRoomOneCompleted">Room 1</Step>
-                        <Step Name="room2" Index="2" Color="Color.Success" Completed="UserSettings.IsRoomTwoCompleted">Room 2</Step>
-                        <Step Name="room3" Index="3" Color="Color.Warning" Completed="UserSettings.IsRoomThreeCompleted">Room 3</Step>
-                        <Step Name="room4" Index="4" Color="Color.Danger" Completed="UserSettings.IsRoomFourCompleted">Room 4</Step>
-                        <Step Name="room5" Index="5" Color="Color.Danger" Completed="UserSettings.IsRoomFiveCompleted">Room 5</Step>
-                        <Step Name="finish" Color="Color.Primary" Completed="UserSettings.IsRoomOneCompleted && UserSettings.IsRoomTwoCompleted && UserSettings.IsRoomThreeCompleted && UserSettings.IsRoomFourCompleted && UserSettings.IsRoomFiveCompleted">
-                            <Marker>
-                                <Icon Name="IconName.Flag"/>
-                            </Marker>
-                            <Caption>
-                                Finish
-                            </Caption>
-                        </Step>
-                    </Items>
-                    <Content>
-                        <!-- empty -->
-                    </Content>
-                </Steps>
-            </div>
-            <div class="row">
-                <div class="col">
-                    <!-- empty -->
-                </div>
-                <div class="col-10 p-2">
-                    <div>
+        <Steps Margin="Margin.Is2">
+            <Items>
+                <Step Name="start" Color="Color.Primary" Completed="true">
+                    <Marker>
+                        <Icon Name="IconName.Home"/>
+                    </Marker>
+                    <Caption>
+                        Start
+                    </Caption>
+                </Step>
+                <Step Name="room1" Index="1" Color="Color.Success" Completed="UserSettings.IsRoomOneCompleted">Room 1</Step>
+                <Step Name="room2" Index="2" Color="Color.Warning" Completed="UserSettings.IsRoomTwoCompleted">Room 2</Step>
+                <Step Name="room3" Index="3" Color="Color.Danger" Completed="UserSettings.IsRoomThreeCompleted">Room 3</Step>
+                <Step Name="finish" Color="Color.Primary" Completed="UserSettings.IsRoomOneCompleted && UserSettings.IsRoomTwoCompleted && UserSettings.IsRoomThreeCompleted">
+                    <Marker>
+                        <Icon Name="IconName.Flag"/>
+                    </Marker>
+                    <Caption>
+                        Finish
+                    </Caption>
+                </Step>
+            </Items>
+            <Content>
+                <Row>
+                    <Column/>
+                    <Column ColumnSize="ColumnSize.Is10" Padding="Padding.Is2">
                         @Body
-                    </div>
-                </div>
-                <div class="col">
-                    <!-- empty -->
-                </div>
-            </div>
-        </div>
+                    </Column>
+                    <Column/>
+                </Row>
+            </Content>
+        </Steps>
     </LayoutContent>
 </Layout>
 
@@ -65,8 +52,6 @@
 {
 
     [Inject] private ISyncLocalStorageService LocalStorage { get; set; }
-
-    private string SelectedStep { get; set; }
 
     protected override void OnInitialized()
     {
