--- a/FakerSpotter/_Imports.razor
+++ b/FakerSpotter/_Imports.razor
@@ -1,4 +1,5 @@
-﻿@using System.Net.Http
+﻿@using System
+@using System.Net.Http
 @using System.Net.Http.Json
 @using System.Text.Json
 @using Microsoft.AspNetCore.Components.Forms
@@ -8,6 +9,7 @@
 @using Microsoft.AspNetCore.Components.WebAssembly.Http
 @using Microsoft.JSInterop
 
+@using BlazorAnimate
 @using Blazored.LocalStorage
 @using Blazorise
 
@@ -15,3 +17,4 @@
 @using FakerSpotter.Components
 @using FakerSpotter.Core
 @using FakerSpotter.Core.Data
+@using FakerSpotter.Core.Helpers
