--- a/FakerSpotter/wwwroot/assets/app.css
+++ b/FakerSpotter/wwwroot/assets/app.css
@@ -1,48 +1,8 @@
-﻿html, body
+﻿#blazor-error-ui
 {
-    font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
-}
-
-a, .btn-link
-{
-    color: #0366d6;
-}
-
-.btn-primary
-{
-    background-color: #1b6ec2;
-    border-color: #1861ac;
-    color: #fff;
-}
-
-.content
-{
-    padding-top: 1.1rem;
-}
-
-.valid.modified:not([type=checkbox])
-{
-    outline: 1px solid #26b050;
-}
-
-.invalid
-{
-    outline: 1px solid red;
-}
-
-.validation-message
-{
-    color: red;
-}
-
-#blazor-error-ui
-{
-    background: lightyellow;
     bottom: 0;
-    box-shadow: 0 -1px 2px rgba(0, 0, 0, 0.2);
-    display: none;
     left: 0;
-    padding: 0.6rem 1.25rem 0.7rem 1.25rem;
+    padding: 0.6rem 1.25rem 0.5rem 1.25rem;
     position: fixed;
     width: 100%;
     z-index: 1000;
