Fixed some issues

--- a/FakerSpotter/Pages/Rooms/Room2.razor
+++ b/FakerSpotter/Pages/Rooms/Room2.razor
@@ -1,6 +1,6 @@
 ﻿@page "/room2"
 
-<RoomPanel RoomName="Room 2" IsCompleted="UserSettings.IsRoomTwoCompleted" IsLocked="!UserSettings.IsRoomOneCompleted" NextRoomEndpoint="room3" PreviousRoomEndpoint="room1">
+<RoomPanel RoomName="Room 2: Fact or Opinion?" IsCompleted="UserSettings.IsRoomTwoCompleted" IsLocked="!UserSettings.IsRoomOneCompleted" NextRoomEndpoint="room3" PreviousRoomEndpoint="room1">
     <RoomContent>
         This room is currently incomplete, you may proceed to the next room
         <Button Color="Color.Primary" Clicked="Continue">Continue</Button>
