--- a/FakerSpotter/Pages/Tutorial.razor
+++ b/FakerSpotter/Pages/Tutorial.razor
@@ -4,7 +4,9 @@
     <Title Size="3" TextAlignment="TextAlignment.Center">Tutorial</Title>
     <Divider/>
     <MarkdownPanel Content="@MarkdownContent"/>
-    <Button Color="Color.Primary" Clicked="OnContinue">Play</Button>
+    <Paragraph TextAlignment="TextAlignment.Center">
+        <Button Color="Color.Primary" Clicked="OnContinue">Play</Button>
+    </Paragraph>
 </Animate>
 
 @code
